@@ -12,4 +12,4 @@ no_index:
   directory: 
     - inc
     - t
-version: 0.09
+version: 0.10
