@@ -1,3 +1,8 @@
+2007-06-09 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.10)
+
+	* Test.php: Implemented TODO blocks via todo_start()/todo_end() (ANDYA's idea)
+	* t/todo.t: New test for TODO pseudoblocks 
+
 2007-06-09 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.09)
 
 	* README: Forgot to update this from the POD in 0.08
